deploy/manifests/dev/us-east-2/tenant/storetheindex/indexstar/canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexstar-canary
spec:
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: indexstar-canary
          args:
            - '--translateReframe'
            - '--translateNonStreaming'
            # Use service names local to the namespace over HTTP to avoid
            # TLS handshake overhead.
            - '--backends=http://ber-indexer:3000/'
            - '--backends=http://cali-indexer:3000/'
            - '--backends=http://ago-indexer:3000/'
            - '--backends=http://dhstore.internal.dev.cid.contact/'
            - '--backends=http://dhfind-cluster-ip:40080/'
            - '--cascadeBackends=http://caskadht.internal.dev.cid.contact/'
            - '--cascadeBackends=http://cassette.internal.dev.cid.contact/'
          resources:
            limits:
              cpu: "3"
              memory: 2Gi
            requests:
              cpu: "3"
              memory: 2Gi
