deploy/manifests/dev/us-east-2/tenant/storetheindex/indexstar/canary/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: indexstar-canary
spec:
  selector:
    app: indexstar-canary
